<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:tag="MAIN" >

    <RelativeLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chargelayout"
        android:background="#f8aa33" >

        <RelativeLayout
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imgvCharging"
                android:layout_width="25dp"
                android:layout_height="25dp"
                />

            <TextView
                android:id="@+id/tvCharging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgvCharging"
               
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tvRemainingBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="25dp"
        android:padding="12dp"
        android:text="@string/strRemainingBattery"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <RelativeLayout
        android:id="@+id/doughnutchartmain"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="35dp" >
        
        <LinearLayout 
            android:orientation="vertical"
            android:id="@+id/doughnutchart"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            
        </LinearLayout>
		
        <TextView
            android:id="@+id/tvdonutcenterlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0%"
            android:textColor="#ffffff"
            android:textSize="20sp" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ttclayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/chargelayout"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tvTimetoCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:maxLines="2"
            android:singleLine="false"
            android:text="@string/strTimetoCharge"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgvWatch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvTimetoCharge"
            android:padding="5dp"
            android:src="@drawable/clock" />

        <TextView
            android:id="@+id/tvChargingHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimetoCharge"
            android:layout_toRightOf="@+id/imgvWatch"
            android:padding="5dp"
            android:text="@string/strChargingHour"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ttclayout"
        android:layout_below="@+id/ttclayout"
        android:layout_alignParentRight="true"
        
        android:id="@+id/rdlayout"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/tvRemainingDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:maxLines="2"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/strRemainingDistance"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgvDistance"
            android:layout_width="22dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvRemainingDistance"
            android:src="@drawable/dist32" />

        <TextView
            android:id="@+id/tvKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tvRemainingDistance"
            
            android:padding="5dp"
            android:text="@string/strKm"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/endlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rdlayout"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCurrent"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgvCurrent"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@+id/tvCurrent"
            android:src="@drawable/ampere" />

        <TextView
            android:id="@+id/tvA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCurrent"
            android:layout_toRightOf="@+id/imgvCurrent"
            android:padding="5dp"
            android:text="@string/strA"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linechart"
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        android:layout_alignParentBottom="true" >
    </RelativeLayout>

</RelativeLayout>